2024-06-30T00:39:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9728041093 # 342
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-30
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 682 1153 / 689 1160
* notice: next accum: outdated-unq outdated-all / unq all: 683 1154 / 689 1160
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-15] / []

2024-06-29T00:35:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9720119593 # 341
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-29
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 680 1151 / 689 1160
* notice: next accum: outdated-unq outdated-all / unq all: 682 1153 / 689 1160
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-14] / []

2024-06-28T00:36:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9705532177 # 340
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-28
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 680 1151 / 688 1159
* notice: next accum: outdated-unq outdated-all / unq all: 680 1151 / 689 1160
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-06-14 2024-06-27]

2024-06-25T00:35:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9654446594 # 337