@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-30T00:39:46Z",
-  "count_outdated" : 1154,
-  "uniques_outdated" : 683,
+  "timestamp" : "2024-07-03T00:36:14Z",
+  "count_outdated" : 1155,
+  "uniques_outdated" : 684,
   "count" : 1160,
   "uniques" : 689,
   "clones" : [
-    {
-      "timestamp": "2024-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-19T00:00:00Z",
       "count": 1,
