@@ -1,3 +1,12 @@
+2024-07-03T00:36:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9769912872 # 345
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-03
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 683 1154 / 689 1160
+* notice: next accum: outdated-unq outdated-all / unq all: 684 1155 / 689 1160
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-06-18] / []
+
 2024-06-30T00:39:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9728041093 # 342
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-30
